

public static class AnimContants
{
    public const string runBool = "IsRunning";
    public const string jumpTrigger = "Jump";
    public const string idleBool = "IsIdle";
    public const string walkBool = "IsWalking";
    public const string standingAttackTrigger = "StandingAttack";
    public const string deathTrigger = "Death";
}
